Adding new parameters to profile API
